--- a/Getting Started with EarthDaily/requirements.txt
+++ b/Getting Started with EarthDaily/requirements.txt
@@ -1,2 +1,10 @@
-earthdaily>=0.3.0
-dask[distributed]==2025.2.0
+earthdaily[platform,legacy]==1.0.0
+requests
+numpy
+geopandas
+python-dotenv
+odc-stac
+matplotlib
+shapely
+pandas
+xarray
