--- a/EDA Mosaics - Dixie Fire Burn Extent/requirements.txt
+++ b/EDA Mosaics - Dixie Fire Burn Extent/requirements.txt
@@ -1,2 +1,13 @@
-earthdaily>=0.3.0
-dask[distributed]==2025.2.0
+earthdaily[platform,legacy]==1.0.0
+dask[distributed]
+requests
+numpy
+xarray
+rasterio
+shapely
+pandas
+python-dotenv
+odc-stac
+matplotlib
+rioxarray
+geopandas
