--- a/EDA Mosaics - EarthMosaics vs Sentinel-2 NDVI/requirements.txt
+++ b/EDA Mosaics - EarthMosaics vs Sentinel-2 NDVI/requirements.txt
@@ -1,2 +1,10 @@
-earthdaily>=0.3.0
-dask[distributed]==2025.2.0
+earthdaily[platform]==1.0.0
+dask[distributed]
+requests
+numpy
+pandas
+python-dotenv
+odc-stac
+matplotlib
+xarray
+pystac-client
