--- a/Introduction to EDA EarthMosaics/requirements.txt
+++ b/Introduction to EDA EarthMosaics/requirements.txt
@@ -1,2 +1,8 @@
-earthdaily>=0.3.0
-dask[distributed]==2025.2.0
+earthdaily[platform]==1.0.0
+requests
+numpy
+pandas
+python-dotenv
+odc-stac
+matplotlib
+xarray
